# INF1015

./: .gitignore
TP1/: approximation_de_pi.cpp  dictionnaire.cpp  emprunt.cpp  hauteur_de_rebond.cpp  nbpremiers.cpp  tableau_pair_impair.cpp
TP2/: debogage_memoire.hpp  structures.hpp  td2.cpp
TP2/include/cppitertools/: combinations_with_replacement.hpp  dropwhile.hpp  filterfalse.hpp  imap.hpp  product.hpp  sorted.hpp  starmap.hpp
TP2/td2Class/: structures.hpp  td2.cpp
TP3/: CodeCoverage_bugfix.h  structures.hpp  td2.cpp  td3.cpp
TP3/include/cppitertools/: combinations.hpp  permutations.hpp  zip.hpp
TP3/td2Class/: ClasseListeFilms.hpp  td2.cpp
TP4/: bibliotheque_cours.cpp  bibliotheque_cours.hpp  structures.hpp  td4.cpp  verification_allocation.cpp  verification_allocation.hpp
TP4/Debug/: td2.vcxproj.FileListAbsolute.txt
TP4/include/cppitertools/: groupby.hpp  range.hpp  (+1 more)
TP5/: CMakeLists.txt  structures.hpp  td5.cpp
TP5/Debug/: td2.vcxproj.FileListAbsolute.txt
projet/: CMakeLists.txt  Chess.sln  Chess.vcxproj  Chess.vcxproj.filters  Makefile  board.cpp  board.hpp  cmake_cours.cmake  constants.hpp  libraries.hpp  main.cpp  maingui.cpp  maingui.hpp  testboard.cpp
projet/.cache/clangd/index/: CodeCoverage_bugfix.h.0D57CBCDD197E333.idx  bibliotheque_cours.cpp.F5377F3D573E0037.idx  bibliotheque_cours.hpp.B0CA3CE8EF82D418.idx  board.cpp.85719E9CA3AAD644.idx  board.hpp.0B8041736176F9D0.idx  constants.hpp.DA9ACD2C47E43A10.idx  debogage_memoire.hpp.9515B070303FA7F7.idx  gsl_assert.51A4FA5BA649C036.idx  gsl_byte.BCBA4366F1A44212.idx  iterbase.hpp.A07BB4C814BC00A0.idx  king.cpp.34C71B1D2DBCDE59.idx  king.hpp.44F10ACEF4F2412A.idx  libraries.hpp.CF874DD70EFEE7D9.idx  main.cpp.AEA4B26D2DCE593B.idx  maingui.cpp.E42EBE329CBC46F5.idx  maingui.hpp.94B6476F8F0E7E7F.idx  pawn.cpp.0D7F38683E9F4F7B.idx  pawn.hpp.25150E06C72B22D0.idx  piece.cpp.B4E094B46FFAE5DE.idx  piece.hpp.11125E47223D9F0D.idx  range.hpp.687BB114256F9F56.idx  rook.cpp.318CBE112C3EBB02.idx  rook.hpp.86B855EE229753BF.idx  span.71707946215D2FFD.idx  testboard.cpp.C64CB57C6601288A.idx  verification_allocation.cpp.30218029655BF931.idx  verification_allocation.hpp.87108BB5D436440B.idx
projet/bibliotheque_cours/: bibliotheque_cours.cpp  verification_allocation.cpp
projet/googletest/include/gmock/: gmock-actions.h  gmock-cardinalities.h  gmock-function-mocker.h  gmock-generated-actions.h  gmock-generated-function-mockers.h  gmock-generated-matchers.h  gmock-matchers.h  gmock-more-actions.h  gmock-more-matchers.h  gmock-nice-strict.h  gmock-spec-builders.h  gmock.h
projet/googletest/include/gmock/internal/: gmock-internal-utils.h  gmock-port.h  gmock-pp.h
projet/googletest/include/gmock/internal/custom/: gmock-generated-actions.h  gmock-matchers.h  gmock-port.h
projet/googletest/include/gtest/: gtest-death-test.h  gtest-matchers.h  gtest-message.h  gtest-param-test.h  gtest-printers.h  gtest-spi.h  gtest-test-part.h  gtest-typed-test.h  gtest.h  gtest_pred_impl.h  gtest_prod.h
projet/googletest/include/gtest/internal/: gtest-death-test-internal.h  gtest-filepath.h  gtest-internal.h  gtest-param-util.h  gtest-port-arch.h  gtest-port.h  gtest-string.h  gtest-type-util.h
projet/googletest/include/gtest/internal/custom/: gtest-port.h  gtest-printers.h  gtest.h
projet/googletest/src/: gmock-all.cc  gmock-cardinalities.cc  gmock-internal-utils.cc  gmock-matchers.cc  gmock-spec-builders.cc  gmock.cc  gmock_main.cc  gtest-all.cc  gtest-death-test.cc  gtest-filepath.cc  gtest-internal-inl.h  gtest-matchers.cc  gtest-port.cc  gtest-printers.cc  gtest-test-part.cc  gtest-typed-test.cc  gtest.cc  gtest_main.cc
projet/include/: CodeCoverage_bugfix.h  bibliotheque_cours.hpp  debogage_memoire.hpp  verification_allocation.hpp
projet/include/cppitertools/: chain.hpp  cycle.hpp  powerset.hpp  reversed.hpp  sliding_window.hpp  starmap.hpp
projet/include/cppitertools/internal/: iteratoriterator.hpp  iterbase.hpp
projet/livrable/: CodeCoverage_bugfix.h  bibliotheque_cours.cpp  bibliotheque_cours.hpp  board.cpp  board.hpp  constants.hpp  debogage_memoire.hpp  libraries.hpp  main.cpp  maingui.cpp  maingui.hpp  testboard.cpp  verification_allocation.cpp  verification_allocation.hpp
projet/livrable/cppitertools/: accumulate.hpp  chain.hpp  chunked.hpp  combinations.hpp  combinations_with_replacement.hpp  compress.hpp  count.hpp  cycle.hpp  dropwhile.hpp  enumerate.hpp  filter.hpp  filterfalse.hpp  groupby.hpp  imap.hpp  permutations.hpp  powerset.hpp  product.hpp  range.hpp  repeat.hpp  reversed.hpp  slice.hpp  sliding_window.hpp  sorted.hpp  starmap.hpp  takewhile.hpp  unique_everseen.hpp  unique_justseen.hpp  zip.hpp  zip_longest.hpp
projet/livrable/cppitertools/internal/: iter_tuples.hpp  iterator_wrapper.hpp  iteratoriterator.hpp  iterbase.hpp
projet/livrable/pieces/: king.cpp  king.hpp  pawn.cpp  pawn.hpp  piece.cpp  piece.hpp  rook.cpp
projet/model/: board.cpp  board.hpp  constants.hpp
projet/model/pieces/: bishop.cpp  bishop.hpp  king.cpp  king.hpp  knight.cpp  knight.hpp  pawn.cpp  piece.cpp  piece.hpp  queen.cpp  queen.hpp  rook.cpp  rook.hpp
projet/pieces/: king.cpp  king.hpp  pawn.cpp  pawn.hpp  piece.cpp  piece.hpp  rook.cpp  rook.hpp
projet/tests/: boardunittest.cpp  pieceunittest.cpp  testboard.cpp  testboard.hpp  testpiece.cpp  testpiece.hpp
projet/view/: boardgui.cpp  boardgui.hpp  maingui.cpp  maingui.hpp  positionsgui.cpp  positionsgui.hpp  promotegui.cpp  promotegui.hpp  squaregui.cpp  squaregui.hpp
projet/x64/Debug/: projet.vcxproj.FileListAbsolute.txt
projet/x64/Debug/moc/: moc_maingui.cpp  moc_projet.cpp
projet/x64/Debug/rcc/: qrc_projet.cpp
projet/x64/Debug/uic/: ui_projet.h
projettest/: CMakeLists.txt
projettest/bibliotheque_cours/: verification_allocation.cpp
projettest/include/: verification_allocation.hpp
td5/: CodeCoverage_bugfix.h  Makefile  bibliotheque_cours.cpp  bibliotheque_cours.hpp  compile_commands.json  debogage_memoire.hpp  structures.hpp  td5.cpp  verification_allocation.cpp  verification_allocation.hpp
td5/Debug/: td2.vcxproj.FileListAbsolute.txt
(+16 files in other folders)
